@@ -17,6 +17,7 @@
 - Added hash-mode 16200 = Apple Secure Notes
 - Added hash-mode 16300 = Ethereum Pre-Sale Wallet, PBKDF2-SHA256
 - Added hash-mode 16400 = CRAM-MD5 Dovecot
+- Added hash-mode 16500 = JWT (JSON Web Token)
 
 ##
 ## Bugs
